test/suites/fail-lower/L-infix-strange.expected
  × One or more errors occured.

Error: L-019

  × Invalid infix declaration: More than one operator on left hand side
   ╭─[L-infix-strange.pol:1:1]
 1 │ infix _ + _ + _ := Fun(_,_)
   · ───────────────────────────
   ╰────
