test/suites/fail-lower/L-infix-strange.pol
infix _ + _ + _ := Fun(_,_)